To fix pb with dropdown menu when "collapsed can't scroll", I decided to hide other <li> elements of the collapsed menu using javascript

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -258,4 +258,11 @@ input{
   overflow-y: scroll;
 }
 
-  
+/*.dropdown-menu {
+  background-color: #333;
+}*/
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    background-color: #0099cc;
+    color: #fff;
+}
